crates/rattler_build_variant_config/tests/snapshots/error_tests__error_with_map.snap
---
source: crates/rattler_build_variant_config/tests/error_tests.rs
expression: error_with_source
---
  × parse error: Unsupported variant value type
   ╭─[with_map.yaml:2:8]
 1 │ foobar:
 2 │   - map: 1234
   ·        ───┬───
   ·           ╰── Unsupported variant value type
   ╰────
